--- a/index.html
+++ b/index.html
@@ -933,139 +933,20 @@ https://templatemo.com/tm-562-space-dynamic
       </div>
     </div>
   </div>
-
-  <div id="about" class="about-us section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="left-image wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <img src="assets/images/about-left-image.png" alt="person graphic" />
-          </div>
-        </div>
-        <div class="col-lg-8 align-self-center">
-          <div class="services">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-                  <div class="icon">
-                    <img src="assets/images/service-icon-01.png" alt="reporting" />
-                  </div>
-                  <div class="right-text">
-                    <h4>Data Analysis</h4>
-                    <p>
-                      Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
-                  <div class="icon">
-                    <img src="assets/images/service-icon-02.png" alt="" />
-                  </div>
-                  <div class="right-text">
-                    <h4>Data Reporting</h4>
-                    <p>
-                      Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.9s">
-                  <div class="icon">
-                    <img src="assets/images/service-icon-03.png" alt="" />
-                  </div>
-                  <div class="right-text">
-                    <h4>Web Analytics</h4>
-                    <p>
-                      Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="1.1s">
-                  <div class="icon">
-                    <img src="assets/images/service-icon-04.png" alt="" />
-                  </div>
-                  <div class="right-text">
-                    <h4>SEO Suggestions</h4>
-                    <p>
-                      Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="services" class="our-services section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 align-self-center wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
-          <div class="left-image">
-            <img src="assets/images/services-left-image.png" alt="" />
-          </div>
-        </div>
-        <div class="col-lg-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
-          <div class="section-heading">
-            <h2>
-              Grow your website with our <em>SEO</em> service &amp;
-              <span>Project</span> Ideas
-            </h2>
-            <p>
-              Space Dynamic HTML5 template is free to use for your website
-              projects. However, you are not permitted to redistribute the
-              template ZIP file on any CSS template collection websites.
-              Please contact us for more information. Thank you for your kind
-              cooperation.
-            </p>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="first-bar progress-skill-bar">
-                <h4>Website Analysis</h4>
-                <span>84%</span>
-                <div class="filled-bar"></div>
-                <div class="full-bar"></div>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="second-bar progress-skill-bar">
-                <h4>SEO Reports</h4>
-                <span>88%</span>
-                <div class="filled-bar"></div>
-                <div class="full-bar"></div>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="third-bar progress-skill-bar">
-                <h4>Page Optimizations</h4>
-                <span>94%</span>
-                <div class="filled-bar"></div>
-                <div class="full-bar"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<hr class="hr1" />
+  
+  
 
   <div id="blog" class="our-blog section">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="section-heading">
-            <h2>
-              Check Out What Is <em>Trending</em> In Our Latest
-              <span>News</span>
-            </h2>
+             <h2 class="comp">Do YOU have any complaints ?</h2>
+              <h2 class="comp">We are here to assist you!</h2>
+              <h2 class="insertcomp">
+                <span>Insert Your Complaints In The Oyo App</span>
+              </h2>
           </div>
         </div>
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
@@ -1078,25 +959,7 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="left-image">
             <a href="#"><img src="assets/images/big-blog-thumb.jpg" alt="Workspace Desktop" /></a>
-            <div class="info">
-              <div class="inner-content">
-                <ul>
-                  <li><i class="fa fa-calendar"></i> 24 Mar 2021</li>
-                  <li><i class="fa fa-users"></i> TemplateMo</li>
-                  <li><i class="fa fa-folder"></i> Branding</li>
-                </ul>
-                <a href="#">
-                  <h4>SEO Agency &amp; Digital Marketing</h4>
-                </a>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur and sed doer ket
-                  eismod tempor incididunt ut labore et dolore magna...
-                </p>
-                <div class="main-blue-button">
-                  <a href="#">Discover More</a>
-                </div>
-              </div>
-            </div>
+            
           </div>
         </div>
         <div class="col-lg-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.25s">
