IIT JMU Logo added

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
-              <h4>
-                Mess <span style="color: black">|</span><span> IIT Jammu</span>
+            <a href="index.html" class="logo d-flex flex-row">
+              <div class="iit-logo"><img src="./assets/images/IIT_COLOR.png" alt=""></div>
+              <h4 class="d-flex flex-column">
+                <div>Mess</div><div><span> IIT Jammu</span></div> 
               </h4>
             </a>
             <!-- ***** Logo End ***** -->
