designing team added

--- a/index.html
+++ b/index.html
@@ -962,6 +962,66 @@
   </div>
   </div>
 
+  <footer>
+    <div id="about" class="about-us section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="left-image wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+              <div style="text-align: center; font-size: 40px; padding-bottom: 20px; color:#000000; font-weight: 700; font-family: 'Dancing Script', cursive;"> Designing Team</div>
+              <!-- <img src="assets/images/about-left-image.png" alt="person graphic" /> -->
+            </div>
+          </div>
+          <div class="col-lg-8 align-self-center">
+            <div class="services">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="item wow fadeIn d-flex flex-row" data-wow-duration="1s" data-wow-delay="0.5s">
+                    <div class="icon">
+                      <img src="assets/images/akanksha raj.jpeg" alt="reporting" />
+                    </div>
+                    <div class="right-text mt-4">
+                      <h4>Akanksha Raj</h4>
+                      <p>
+                        2020UCS0109
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="item wow fadeIn d-flex flex-row" data-wow-duration="1s" data-wow-delay="0.7s">
+                    <div class="icon">
+                      <img src="assets/images/Sahaj Mistry.jpg" alt="" />
+                    </div>
+                    <div class="right-text mt-4">
+                      <h4>Sahaj Mistry</h4>
+                      <p>
+                        2020UCS0105
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="item wow fadeIn d-flex flex-row" data-wow-duration="1s" data-wow-delay="0.9s">
+                    <div class="icon">
+                      <img src="assets/images/divya_sangwan.jpeg" alt="" />
+                    </div>
+                    <div class="right-text mt-3">
+                      <h4>Divya Sangwan</h4>
+                      <p>
+                        2020ucs0093
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <!-- Scripts -->
 
   <script>
