design in navbar added

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
               <li class="scroll-to-section">
                 <a href="#contact">Resolved-Issues</a>
               </li>
+              <li class="scroll-to-section">
+                <a href="#designing-team">Designing-Team</a>
+              </li>
             </ul>
             <a class="menu-trigger">
               <span>Menu</span>
@@ -903,11 +906,11 @@
       <div class="row">
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="section-heading">
-             <h2 class="comp">Do YOU have any complaints?</h2>
-              <h2 class="comp">We are here to assist you!</h2>
-              <h2 class="insertcomp">
-                <span>Insert Your Complaints In The Oyo App</span>
-              </h2>
+             <div class="comp">Do YOU have any complaints?</div>
+              <div class="comp">We are here to assist you!</div>
+              <div class="insertcomp">
+                <span style="color: #fe3f40;">Insert Your Complaints In The Oyo App</span>
+              </div>
           </div>
         </div>
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
@@ -962,7 +965,7 @@
   </div>
   </div>
 
-  <footer>
+  <footer id="designing-team">
     <div id="about" class="about-us section">
       <div class="container">
         <div class="row">
